# lab-core-python

./: .gitignore  README.md  environment_samap.yml  environment_samap_raw.yml  environment_scrna_py310.yml  pyproject.toml  repomix-output.xml
src/labcore/: __init__.py
src/labcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/labcore/integration/: __init__.py  plotting.py
src/labcore/scrnaseq/: __init__.py  analysis.py  annotation.py  io.py  orthology.py  plotting.py  preprocessing.py  qc.py  utils.py  workflows.py
