# In lab-core-python/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# The name pip uses and the name you import!
name = "labcore"
version = "0.1.0"
authors = [
  { name="Your Lab Name", email="lab.contact@example.com" },
]
description = "A core library of shared Python tools for [Your Lab Name]."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Add ALL dependencies for ALL sub-packages here.
# For a more advanced setup, you can define "optional" dependencies
# for each sub-package (e.g., pip install 'labcore[scrnaseq]').
dependencies = [
    "scanpy>=1.9.0",
    "pandas>=1.5.0",
    "gprofiler-official",
    "pyensembl",
    "gseapy"
]

[project.urls]
Homepage = "https://github.com/franciscolobo/lab-core-python"
Issues = "https://github.com/franciscolobo/lab-core-python/issues"
